--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <body>
 
     <h1>Hello World!</h1>
+
+    <h2>homework</h2>
+    <p><a href="homework/hw1/index.html">hw1</a></p>
     
 </body>
 </html>
