--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
 </head>
 <body>
 
-    <h1>Hello World!</h1>
+    <h1>DES 342</h1>
 
     <h2>homework</h2>
     <p><a href="homework/hw1/index.html">hw1</a></p>
-    
 </body>
 </html>
