--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <h1>DES 342</h1>
     <h2>homework</h2>
     <p><a href="homework/hw1/index.html">hw1</a></p>
+    <p><a href="homework/hw2/index.html">hw2</a></p>
 </body>
 </html>
