--- a/homework/hw2/index.html
+++ b/homework/hw2/index.html
@@ -10,11 +10,19 @@
 <body>
     <h1>JQuery Practice</h1>
     <div class="image-box">
-        <img class="animal-pic" src="images/3.jpg" alt="">
+        <img class="pic" src="images/1.jpg" alt="">
         <br>
         <a href="#" class="one">one</a>
         <a href="#" class="two">two</a>
         <a href="#" class="three">three</a>
+        <a href="#" class="four">four</a>
+        <a href="#" class="five">five</a>
+        <a href="#" class="six">six</a>
+        <a href="#" class="seven">seven</a>
+        <a href="#" class="eight">eight</a>
+        <a href="#" class="nine">nine</a>
+        
+
     </div>
     <script
         src="https://code.jquery.com/jquery-3.6.0.min.js"
